# University

./: README.md
Advanced Programming Methods/: README.md
Artificial Intelligence/: README.md
Artificial Intelligence/Laboratories/Laboratory 1 - DFS/: DMap.py  Drone.py  (+2 more)
Computer Networks/: README.md
Data Structures and Algorithms/: README.md
Database Management Systems/: README.md
Databases/: README.md
Functional and Logic Programming/: README.md
Fundamentals of Programming/: README.md
Graph Algorithms/: README.md
Object Oriented Programming/: README.md
Object Oriented Programming/Laboratories/lab 9/: AdminFile.cpp  AdminFile.h  CMakeLists.txt  Controller.cpp  Controller.h  DynamicArray.h  Iterator.cpp  Iterator.h  Repository.cpp  Repository.h  Tests.cpp  UserFile.cpp  UserFile.h  UserInterface.cpp  UserInterface.h  Validators.h  csvfile.csv  main.cpp  myprogram
Operating Systems/: README.md
Probabilities and Statistics/: README.md
Probabilities and Statistics/Laboratories/: graph1.m  lab2.m  lab5_1.m  lab6.m  lab_1.m  lab_2.m  lab_2_simulation.m  lab_3.m  lab_3_norm_approx.m  lab_3_poiss_approx.m  lab_4_simulate_bernoulli.m  lab_4_simulate_binomial.m  lab_5.m  lab_5_B.m  lab_5_B2.m  lab_6.m  lab_6_2.m  pract_p2.m  pract_p3.m  pract_p4.m
Software Engineering/: README.md
Systems for Design and Implementation/: README.md
Systems for Design and Implementation/lab2x-the-crooked-raven/: .gitignore  build.gradle
Systems for Design and Implementation/lab9x-adelinmihoc/: .gitignore  README.md  settings.gradle
Web Programming/: README.md
(+1263 files in other folders)
